# portfolio-herbarium-bot

./: .cursorrules  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
herbabot/: config.py  exif_utils.py  github_pr.py  handlers.py  handlers_utils.py  main.py  plant_description.py  plant_entry.py  plant_id.py
templates/: bot_welcome.md  plant_entry.md.j2
tests/: test_example.py
