[project]
name = "herbabot"
version = "0.1.0"
description = "Herbarium Telegram Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jinja2>=3.1.0",
    "mypy>=1.16.1",
    "openai>=1.62.3",
    "piexif>=1.1.3",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.7.1",
    "python-telegram-bot>=22.1",
    "requests>=2.32.4",
    "pydantic-settings>=2.2.1",
    "types-requests>=2.31.0",
]

[tool.mypy]
python_version = '3.12'
disallow_any_unimported = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
disallow_untyped_defs = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
mypy_path = './stubs'

[tool.isort]
profile = 'black'
src_paths = ['herbabot', 'tests']
line_length = 119

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
